MpsParser2.cpp
/*
* Copyright 2026 Rochus Keller <mailto:me@rochus-keller.ch>
*
* This file is part of the MUMPS 76 project.
*
* The following is the license that applies to this copy of the
* file. For a license to use the file under conditions
* other than those described here, please email to me@rochus-keller.ch.
*
* GNU General Public License Usage
* This file may be used under the terms of the GNU General Public
* License (GPL) versions 2.0 or 3.0 as published by the Free Software
* Foundation and appearing in the file LICENSE.GPL included in
* the packaging of this file. Please review the following information
* to ensure GNU General Public Licensing requirements will be met:
* http://www.fsf.org/licensing/licenses/info/GPLv2.html and
* http://www.gnu.org/copyleft/gpl.html.
*/

#include "MpsParser2.h"
#include "MpsTokenType.h"
using namespace Mps;


static inline bool FIRST_command(int tt) {
    switch(tt){
    case Tok_BREAK: case Tok_CLOSE:
    case Tok_DO: case Tok_ELSE:
    case Tok_FOR: case Tok_GOTO:
    case Tok_HALT: case Tok_IF:
    case Tok_JOB: case Tok_KILL:
    case Tok_LOCK: case Tok_NEW:
    case Tok_OPEN: case Tok_QUIT:
    case Tok_READ: case Tok_SET:
    case Tok_USE: case Tok_VIEW:
    case Tok_WRITE: case Tok_XECUTE:
    case Tok_ZCMD:
        return true;
    default: return false;
    }
}

static inline bool FIRST_line(int tt) {
    switch(tt){
    case Tok_CmdSep: case Tok_Dot: case Tok_Newline: case Tok_ident: case Tok_integer:
        return true;
    default: return FIRST_command(tt);
    }
}

static inline bool FIRST_label(int tt) {
    return tt == Tok_ident || tt == Tok_integer;
}

static inline bool FIRST_postcond(int tt) {
    return tt == Tok_Colon;
}

static inline bool FIRST_expr(int tt) {
    switch(tt){
    case Tok_2Dlr: case Tok_At:
    case Tok_Dlr: case Tok_Hat:
    case Tok_Lpar: case Tok_Minus:
    case Tok_Plus: case Tok_ident:
    case Tok_integer: case Tok_real:
    case Tok_string: case Tok_tick:
        return true;
    default: return false;
    }
}

static inline bool FIRST_expratom(int tt) {
    return FIRST_expr(tt);
}

static inline bool FIRST_exprlist(int tt) {
    switch(tt){
    case Tok_2Dlr: case Tok_At: case Tok_Dlr: case Tok_Dot:
    case Tok_Hat: case Tok_Lpar: case Tok_Minus: case Tok_Plus:
    case Tok_ident: case Tok_integer: case Tok_real: case Tok_string:
    case Tok_tick:
        return true;
    default: return false;
    }
}

static inline bool FIRST_numlit(int tt) {
    return tt == Tok_integer || tt == Tok_real;
}

static inline bool FIRST_dollaritem(int tt) {
    return tt == Tok_2Dlr || tt == Tok_Dlr;
}

static inline bool FIRST_gvntail(int tt) {
    return tt == Tok_At || tt == Tok_Lpar || tt == Tok_ident;
}

static inline bool FIRST_unaryop(int tt) {
    return tt == Tok_Minus || tt == Tok_Plus || tt == Tok_tick;
}

static inline bool FIRST_binop(int tt) {
    switch(tt){
    case Tok_5f: case Tok_Amp: case Tok_Bang: case Tok_Eq:
    case Tok_Gt: case Tok_Hash: case Tok_Lbrack: case Tok_Lt:
    case Tok_Minus: case Tok_Plus: case Tok_Rbrack: case Tok_Slash:
    case Tok_Star: case Tok_bslash:
        return true;
    default: return false;
    }
}

static inline bool FIRST_pattern(int tt) {
    switch(tt){
    case Tok_At: case Tok_Dot: case Tok_Lpar: case Tok_ident:
    case Tok_integer: case Tok_real: case Tok_string:
        return true;
    default: return false;
    }
}

static inline bool FIRST_funcarg(int tt) {
    return FIRST_expr(tt);
}

static inline bool FIRST_doargs(int tt) {
    return tt == Tok_At || tt == Tok_Hat || tt == Tok_ident || tt == Tok_integer;
}

static inline bool FIRST_forargs(int tt) {
    return tt == Tok_At || tt == Tok_ident;
}

static inline bool FIRST_glvn(int tt) {
    return tt == Tok_At || tt == Tok_Hat || tt == Tok_ident;
}

static inline bool FIRST_killargs(int tt) {
    return tt == Tok_At || tt == Tok_Dlr || tt == Tok_Hat || tt == Tok_Lpar || tt == Tok_ident;
}

static inline bool FIRST_lockargs(int tt) {
    return tt == Tok_At || tt == Tok_Hat || tt == Tok_Lpar || tt == Tok_ident;
}

static inline bool FIRST_openparams(int tt) {
    return tt == Tok_Colon;
}

static inline bool FIRST_readargs(int tt) {
    switch(tt){
    case Tok_At: case Tok_Bang: case Tok_Hash: case Tok_Hat:
    case Tok_Qmark: case Tok_Star: case Tok_ident: case Tok_string:
        return true;
    default: return false;
    }
}

static inline bool FIRST_readarg(int tt) {
    return FIRST_readargs(tt);
}

static inline bool FIRST_readfmt(int tt) {
    return tt == Tok_Bang || tt == Tok_Hash || tt == Tok_Qmark || tt == Tok_Star;
}

static inline bool FIRST_readvar(int tt) {
    return tt == Tok_At || tt == Tok_Hat || tt == Tok_ident;
}

static inline bool FIRST_setargs(int tt) {
    switch(tt){
    case Tok_At: case Tok_Dlr: case Tok_Eq: case Tok_Hat:
    case Tok_Lpar: case Tok_ident:
        return true;
    default: return false;
    }
}

static inline bool FIRST_setdest(int tt) {
    return tt == Tok_At || tt == Tok_Dlr || tt == Tok_Hat || tt == Tok_Lpar || tt == Tok_ident;
}

static inline bool FIRST_writeargs(int tt) {
    switch(tt){
    case Tok_2Dlr: case Tok_At: case Tok_Bang: case Tok_Dlr:
    case Tok_Hash: case Tok_Hat: case Tok_Lpar: case Tok_Minus:
    case Tok_Plus: case Tok_Qmark: case Tok_Star: case Tok_ident:
    case Tok_integer: case Tok_real: case Tok_string: case Tok_tick:
        return true;
    default: return false;
    }
}

static inline bool FIRST_writearg(int tt) {
    return FIRST_writeargs(tt);
}

static inline bool FIRST_useargs(int tt) {
    return FIRST_expr(tt);
}

static inline bool FIRST_xecuteargs(int tt) {
    return FIRST_expr(tt);
}

static inline bool FIRST_newargs(int tt) {
    return tt == Tok_Lpar || tt == Tok_ident;
}

static inline bool FIRST_viewargs(int tt) {
    switch(tt){
    case Tok_2Dlr: case Tok_At: case Tok_Colon: case Tok_Comma:
    case Tok_Dlr: case Tok_Hat: case Tok_Lpar: case Tok_Minus:
    case Tok_Plus: case Tok_ident: case Tok_integer: case Tok_real:
    case Tok_string: case Tok_tick:
        return true;
    default: return false;
    }
}

static inline bool FIRST_zargs(int tt) {
    switch(tt){
    case Tok_2Dlr: case Tok_At: case Tok_Dlr: case Tok_Hat:
    case Tok_Lpar: case Tok_Minus: case Tok_Plus: case Tok_ident:
    case Tok_integer: case Tok_real: case Tok_string: case Tok_tick:
        return true;
    default: return false;
    }
}

static inline bool FIRST_entryref(int tt) {
    return tt == Tok_At || tt == Tok_Hat || tt == Tok_ident || tt == Tok_integer;
}

static inline bool FIRST_label_ref(int tt) {
    return tt == Tok_ident || tt == Tok_integer;
}

static inline bool FIRST_actuallist(int tt) {
    switch(tt){
    case Tok_2Dlr: case Tok_At: case Tok_Dlr: case Tok_Dot:
    case Tok_Hat: case Tok_Lpar: case Tok_Minus: case Tok_Plus:
    case Tok_ident: case Tok_integer: case Tok_real: case Tok_string:
    case Tok_tick:
        return true;
    default: return false;
    }
}


void Parser2::next()
{
    cur = la;
    if( !d_queue.isEmpty() )
    {
        la = d_queue.takeFirst();
        return;
    }
    la = scanner->next();
    while( la.d_type == Tok_Invalid )
    {
        errors << Error(la.d_val, la.d_lineNr, la.d_colNr, la.d_sourcePath);
        la = scanner->next();
    }
}

Token Parser2::peek(int off)
{
    if( off == 1 )
        return la;
    else if( off == 0 )
        return cur;
    else
        return scanner->peek(off-1);
}

void Parser2::invalid(const char* what)
{
    errors << Error(QString("invalid %1").arg(what),
                    la.d_lineNr, la.d_colNr, la.d_sourcePath);
}

bool Parser2::expect(int tt, bool pkw, const char* where)
{
    Q_UNUSED(pkw);
    if( la.d_type == tt )
    {
        next();
        return true;
    }else
    {
        errors << Error(QString("'%1' expected in %2").arg(tokenTypeString(tt)).arg(where),
                        la.d_lineNr, la.d_colNr, la.d_sourcePath);
        return false;
    }
}


Routine* Parser2::parse()
{
    errors.clear();
    next();

    Routine* r = new Routine();
    r->d_sourcePath = la.d_sourcePath;

    while( FIRST_line(la.d_type) )
    {
        Line* l = line();
        if( l )
            r->d_lines.append(l);
    }
    return r;
}

Line* Parser2::line()
{
    Line* l = new Line();
    l->d_lineNr = la.d_lineNr;

    // Optional label
    if( FIRST_label(la.d_type) )
    {
        l->d_label = la.d_val;
        if( la.d_type == Tok_ident )
            expect(Tok_ident, false, "label");
        else
            expect(Tok_integer, false, "label");

        // Optional formal params: label(p1,p2,...)
        if( la.d_type == Tok_Lpar )
        {
            expect(Tok_Lpar, false, "label");
            if( FIRST_expr(la.d_type) )
            {
                // params are syntactically expressions, but semantically idents
                Expression* e = expr();
                if( e && !e->d_operands.isEmpty()
                    && e->d_operands.first()->d_tag == ExprAtom::LocalVar
                    && e->d_ops.isEmpty() )
                    l->d_params.append(e->d_operands.first()->d_name);
                else if( e && !e->d_operands.isEmpty() )
                    l->d_params.append(e->d_operands.first()->d_val);
                delete e;

                while( la.d_type == Tok_Comma )
                {
                    expect(Tok_Comma, false, "params");
                    e = expr();
                    if( e && !e->d_operands.isEmpty()
                        && e->d_operands.first()->d_tag == ExprAtom::LocalVar
                        && e->d_ops.isEmpty() )
                        l->d_params.append(e->d_operands.first()->d_name);
                    else if( e && !e->d_operands.isEmpty() )
                        l->d_params.append(e->d_operands.first()->d_val);
                    delete e;
                }
            }
            expect(Tok_Rpar, false, "label");
        }
    }

    // Dot level
    while( la.d_type == Tok_Dot )
    {
        l->d_dotLevel++;
        expect(Tok_Dot, false, "line");
    }

    // Commands
    while( la.d_type == Tok_CmdSep || FIRST_command(la.d_type) )
    {
        if( la.d_type == Tok_CmdSep )
            expect(Tok_CmdSep, false, "line");
        Command* c = command();
        if( c )
            l->d_commands.append(c);
    }

    expect(Tok_Newline, false, "line");
    return l;
}

Command* Parser2::command()
{
    if( la.d_type == Tok_BREAK )
        return break_();
    if( la.d_type == Tok_CLOSE )
        return close_();
    if( la.d_type == Tok_DO )
        return do_();
    if( la.d_type == Tok_ELSE )
        return else_();
    if( la.d_type == Tok_FOR )
        return for_();
    if( la.d_type == Tok_GOTO )
        return goto_();
    if( la.d_type == Tok_HALT )
        return halt_();
    if( la.d_type == Tok_IF )
        return if_();
    if( la.d_type == Tok_KILL )
        return kill_();
    if( la.d_type == Tok_LOCK )
        return lock_();
    if( la.d_type == Tok_OPEN )
        return open_();
    if( la.d_type == Tok_QUIT )
        return quit_();
    if( la.d_type == Tok_READ )
        return read_();
    if( la.d_type == Tok_SET )
        return set_();
    if( la.d_type == Tok_USE )
        return use_();
    if( la.d_type == Tok_VIEW )
        return view_();
    if( la.d_type == Tok_WRITE )
        return write_();
    if( la.d_type == Tok_XECUTE )
        return xecute_();
    if( la.d_type == Tok_NEW )
        return new_();
    if( la.d_type == Tok_JOB )
        return job_();
    if( la.d_type == Tok_ZCMD )
        return zcmd_();
    invalid("command");
    return 0;
}


Expression* Parser2::postcond()
{
    expect(Tok_Colon, false, "postcond");
    return expr();
}

// Helper macro for the common command prologue:
// consume keyword, parse optional postcond, consume optional CmdSep
#define CMD_PROLOGUE(tokType, cmdName) \
    Command* c = new Command(); \
    c->d_lineNr = la.d_lineNr; \
    c->d_colNr = la.d_colNr; \
    c->d_type = tokType; \
    expect(tokType, false, cmdName); \
    if( FIRST_postcond(la.d_type) ) \
        c->d_postcond = postcond(); \
    if( la.d_type == Tok_CmdSep ) \
        expect(Tok_CmdSep, false, cmdName)

Command* Parser2::break_()
{
    CMD_PROLOGUE(Tok_BREAK, "break_");
    if( FIRST_exprlist(la.d_type) )
        exprlist(c->d_exprs);
    return c;
}

Command* Parser2::close_()
{
    CMD_PROLOGUE(Tok_CLOSE, "close_");
    openargs(c->d_deviceArgs);
    return c;
}

Command* Parser2::do_()
{
    CMD_PROLOGUE(Tok_DO, "do_");
    if( FIRST_doargs(la.d_type) )
    {
        // doargs: doarg { ',' doarg }
        CondEntry* ce = new CondEntry();
        ce->d_entry = entryref();
        if( FIRST_postcond(la.d_type) )
            ce->d_postcond = postcond();
        c->d_entries.append(ce);

        while( la.d_type == Tok_Comma )
        {
            expect(Tok_Comma, false, "doargs");
            ce = new CondEntry();
            ce->d_entry = entryref();
            if( FIRST_postcond(la.d_type) )
                ce->d_postcond = postcond();
            c->d_entries.append(ce);
        }
    }
    return c;
}

Command* Parser2::else_()
{
    Command* c = new Command();
    c->d_lineNr = la.d_lineNr;
    c->d_colNr = la.d_colNr;
    c->d_type = Tok_ELSE;
    expect(Tok_ELSE, false, "else_");
    return c;
}

Command* Parser2::for_()
{
    CMD_PROLOGUE(Tok_FOR, "for_");
    if( FIRST_forargs(la.d_type) )
    {
        // forargs: lvar '=' forarg { ',' forarg }
        c->d_forVar = lvar();
        expect(Tok_Eq, false, "forargs");

        // forarg: expr [ ':' expr [ ':' expr ] ]
        ForRange* fr = new ForRange();
        fr->d_start = expr();
        if( la.d_type == Tok_Colon )
        {
            expect(Tok_Colon, false, "forarg");
            fr->d_increment = expr();
            if( la.d_type == Tok_Colon )
            {
                expect(Tok_Colon, false, "forarg");
                fr->d_limit = expr();
            }
        }
        c->d_forRanges.append(fr);

        while( la.d_type == Tok_Comma )
        {
            expect(Tok_Comma, false, "forargs");
            fr = new ForRange();
            fr->d_start = expr();
            if( la.d_type == Tok_Colon )
            {
                expect(Tok_Colon, false, "forarg");
                fr->d_increment = expr();
                if( la.d_type == Tok_Colon )
                {
                    expect(Tok_Colon, false, "forarg");
                    fr->d_limit = expr();
                }
            }
            c->d_forRanges.append(fr);
        }
    }
    return c;
}

Command* Parser2::goto_()
{
    CMD_PROLOGUE(Tok_GOTO, "goto_");
    // gotoargs: gotoarg { ',' gotoarg }
    CondEntry* ce = new CondEntry();
    ce->d_entry = entryref();
    if( FIRST_postcond(la.d_type) )
        ce->d_postcond = postcond();
    c->d_entries.append(ce);

    while( la.d_type == Tok_Comma )
    {
        expect(Tok_Comma, false, "gotoargs");
        ce = new CondEntry();
        ce->d_entry = entryref();
        if( FIRST_postcond(la.d_type) )
            ce->d_postcond = postcond();
        c->d_entries.append(ce);
    }
    return c;
}

Command* Parser2::halt_()
{
    CMD_PROLOGUE(Tok_HALT, "halt_");
    if( FIRST_exprlist(la.d_type) )
        exprlist(c->d_exprs);
    return c;
}

Command* Parser2::if_()
{
    CMD_PROLOGUE(Tok_IF, "if_");
    if( FIRST_exprlist(la.d_type) )
        exprlist(c->d_exprs);
    return c;
}

Command* Parser2::kill_()
{
    CMD_PROLOGUE(Tok_KILL, "kill_");
    if( FIRST_killargs(la.d_type) )
    {
        c->d_killArgs.append(killarg());
        while( la.d_type == Tok_Comma )
        {
            expect(Tok_Comma, false, "killargs");
            c->d_killArgs.append(killarg());
        }
    }
    return c;
}

Command* Parser2::lock_()
{
    CMD_PROLOGUE(Tok_LOCK, "lock_");
    if( FIRST_lockargs(la.d_type) )
    {
        // lockarg: nref [ ':' expr ]
        LockArg* la2 = new LockArg();
        la2->d_ref = nref();
        if( la.d_type == Tok_Colon )
        {
            expect(Tok_Colon, false, "lockarg");
            la2->d_timeout = expr();
        }
        c->d_lockArgs.append(la2);

        while( la.d_type == Tok_Comma )
        {
            expect(Tok_Comma, false, "lockargs");
            la2 = new LockArg();
            la2->d_ref = nref();
            if( la.d_type == Tok_Colon )
            {
                expect(Tok_Colon, false, "lockarg");
                la2->d_timeout = expr();
            }
            c->d_lockArgs.append(la2);
        }
    }
    return c;
}

Command* Parser2::open_()
{
    CMD_PROLOGUE(Tok_OPEN, "open_");
    openargs(c->d_deviceArgs);
    return c;
}

Command* Parser2::quit_()
{
    CMD_PROLOGUE(Tok_QUIT, "quit_");
    if( FIRST_expr(la.d_type) )
        c->d_quitExpr = expr();
    return c;
}

Command* Parser2::read_()
{
    CMD_PROLOGUE(Tok_READ, "read_");
    // readargs: readarg { [','] readarg }
    if( FIRST_readarg(la.d_type) )
    {
        // readarg: readfmt | string | readvar
        if( FIRST_readfmt(la.d_type) )
        {
            ReadArg* ra = new ReadArg();
            if( la.d_type == Tok_Bang )
            {
                ra->d_kind = ReadArg::NewLine;
                expect(Tok_Bang, false, "readfmt");
            }else if( la.d_type == Tok_Hash )
            {
                ra->d_kind = ReadArg::FormFeed;
                expect(Tok_Hash, false, "readfmt");
            }else if( la.d_type == Tok_Qmark )
            {
                ra->d_kind = ReadArg::Tab;
                expect(Tok_Qmark, false, "readfmt");
                ra->d_expr = expr();
            } else if( la.d_type == Tok_Star )
            {
                ra->d_kind = ReadArg::Star;
                expect(Tok_Star, false, "readfmt");
                ra->d_var = glvn();
                if( la.d_type == Tok_Colon )
                {
                    expect(Tok_Colon, false, "readfmt");
                    ra->d_timeout = expr();
                }
            }
            c->d_readArgs.append(ra);
        }
        else if( la.d_type == Tok_string )
        {
            ReadArg* ra = new ReadArg();
            ra->d_kind = ReadArg::Prompt;
            ra->d_expr = new Expression();
            ra->d_expr->d_lineNr = la.d_lineNr;
            ra->d_expr->d_colNr = la.d_colNr;
            ExprAtom* a = new ExprAtom();
            a->d_tag = ExprAtom::StringLit;
            a->d_val = la.d_val;
            a->d_lineNr = la.d_lineNr;
            a->d_colNr = la.d_colNr;
            ra->d_expr->d_operands.append(a);
            expect(Tok_string, false, "readarg");
            c->d_readArgs.append(ra);
        }else if( FIRST_readvar(la.d_type) )
        {
            ReadArg* ra = new ReadArg();
            ra->d_kind = ReadArg::Var;
            ra->d_var = glvn();
            if( la.d_type == Tok_Hash )
            {
                expect(Tok_Hash, false, "readvar");
                ra->d_maxLen = expr();
            }
            if( la.d_type == Tok_Colon )
            {
                expect(Tok_Colon, false, "readvar");
                ra->d_timeout = expr();
            }
            c->d_readArgs.append(ra);
        }else
            invalid("readarg");

        // Remaining readargs: { [','] readarg }
        while( la.d_type == Tok_Comma || FIRST_readarg(la.d_type) )
        {
            if( la.d_type == Tok_Comma )
                expect(Tok_Comma, false, "readargs");

            if( FIRST_readfmt(la.d_type) )
            {
                ReadArg* ra = new ReadArg();
                if( la.d_type == Tok_Bang )
                {
                    ra->d_kind = ReadArg::NewLine;
                    expect(Tok_Bang, false, "readfmt");
                } else if( la.d_type == Tok_Hash )
                {
                    ra->d_kind = ReadArg::FormFeed;
                    expect(Tok_Hash, false, "readfmt");
                } else if( la.d_type == Tok_Qmark )
                {
                    ra->d_kind = ReadArg::Tab;
                    expect(Tok_Qmark, false, "readfmt");
                    ra->d_expr = expr();
                }else if( la.d_type == Tok_Star )
                {
                    ra->d_kind = ReadArg::Star;
                    expect(Tok_Star, false, "readfmt");
                    ra->d_var = glvn();
                    if( la.d_type == Tok_Colon )
                    {
                        expect(Tok_Colon, false, "readfmt");
                        ra->d_timeout = expr();
                    }
                }
                c->d_readArgs.append(ra);
            }else if( la.d_type == Tok_string )
            {
                ReadArg* ra = new ReadArg();
                ra->d_kind = ReadArg::Prompt;
                ra->d_expr = new Expression();
                ra->d_expr->d_lineNr = la.d_lineNr;
                ra->d_expr->d_colNr = la.d_colNr;
                ExprAtom* a = new ExprAtom();
                a->d_tag = ExprAtom::StringLit;
                a->d_val = la.d_val;
                a->d_lineNr = la.d_lineNr;
                a->d_colNr = la.d_colNr;
                ra->d_expr->d_operands.append(a);
                expect(Tok_string, false, "readarg");
                c->d_readArgs.append(ra);
            } else if( FIRST_readvar(la.d_type) )
            {
                ReadArg* ra = new ReadArg();
                ra->d_kind = ReadArg::Var;
                ra->d_var = glvn();
                if( la.d_type == Tok_Hash )
                {
                    expect(Tok_Hash, false, "readvar");
                    ra->d_maxLen = expr();
                }
                if( la.d_type == Tok_Colon )
                {
                    expect(Tok_Colon, false, "readvar");
                    ra->d_timeout = expr();
                }
                c->d_readArgs.append(ra);
            }else
            {
                invalid("readarg");
                break;
            }
        }
    }
    return c;
}

Command* Parser2::set_()
{
    CMD_PROLOGUE(Tok_SET, "set_");
    // setargs: setarg { ',' setarg }
    // setarg: setdest [ '=' expr ] | '='
    {
        SetArg* sa = new SetArg();
        if( FIRST_setdest(la.d_type) )
        {
            sa->d_dests.append(setdest());
            if( la.d_type == Tok_Eq )
            {
                expect(Tok_Eq, false, "setarg");
                sa->d_expr = expr();
            }
        }
        else if( la.d_type == Tok_Eq )
            expect(Tok_Eq, false, "setarg");
        else
            invalid("setarg");
        c->d_setArgs.append(sa);
    }

    while( la.d_type == Tok_Comma )
    {
        expect(Tok_Comma, false, "setargs");
        SetArg* sa = new SetArg();
        if( FIRST_setdest(la.d_type) )
        {
            sa->d_dests.append(setdest());
            if( la.d_type == Tok_Eq )
            {
                expect(Tok_Eq, false, "setarg");
                sa->d_expr = expr();
            }
        }else if( la.d_type == Tok_Eq )
            expect(Tok_Eq, false, "setarg");
        else
            invalid("setarg");
        c->d_setArgs.append(sa);
    }
    return c;
}

Command* Parser2::use_()
{
    CMD_PROLOGUE(Tok_USE, "use_");
    if( FIRST_useargs(la.d_type) )
    {
        // usearg: expr [openparams]
        DeviceArg* da = new DeviceArg();
        da->d_expr = expr();
        if( FIRST_openparams(la.d_type) )
            openparams(da->d_params);
        c->d_deviceArgs.append(da);

        while( la.d_type == Tok_Comma )
        {
            expect(Tok_Comma, false, "useargs");
            da = new DeviceArg();
            da->d_expr = expr();
            if( FIRST_openparams(la.d_type) )
                openparams(da->d_params);
            c->d_deviceArgs.append(da);
        }
    }
    return c;
}

Command* Parser2::view_()
{
    CMD_PROLOGUE(Tok_VIEW, "view_");
    if( FIRST_viewargs(la.d_type) )
    {
        // viewgroup: [expr] { ':' [expr] }
        ViewGroup* vg = new ViewGroup();
        if( FIRST_expr(la.d_type) )
            vg->d_exprs.append(expr());
        else
            vg->d_exprs.append(0);
        while( la.d_type == Tok_Colon )
        {
            expect(Tok_Colon, false, "viewgroup");
            if( FIRST_expr(la.d_type) )
                vg->d_exprs.append(expr());
            else
                vg->d_exprs.append(0);
        }
        c->d_viewGroups.append(vg);

        while( la.d_type == Tok_Comma )
        {
            expect(Tok_Comma, false, "viewargs");
            vg = new ViewGroup();
            if( FIRST_expr(la.d_type) )
                vg->d_exprs.append(expr());
            else
                vg->d_exprs.append(0);
            while( la.d_type == Tok_Colon )
            {
                expect(Tok_Colon, false, "viewgroup");
                if( FIRST_expr(la.d_type) )
                    vg->d_exprs.append(expr());
                else
                    vg->d_exprs.append(0);
            }
            c->d_viewGroups.append(vg);
        }
    }
    return c;
}

Command* Parser2::write_()
{
    CMD_PROLOGUE(Tok_WRITE, "write_");
    if( FIRST_writeargs(la.d_type) )
    {
        // writearg: '!' | '#' | '?' expr | '*' expr | expr
        WriteArg* wa = new WriteArg();
        if( la.d_type == Tok_Bang )
        {
            wa->d_kind = WriteArg::NewLine;
            expect(Tok_Bang, false, "writearg");
        } else if( la.d_type == Tok_Hash )
        {
            wa->d_kind = WriteArg::FormFeed;
            expect(Tok_Hash, false, "writearg");
        } else if( la.d_type == Tok_Qmark )
        {
            wa->d_kind = WriteArg::Tab;
            expect(Tok_Qmark, false, "writearg");
            wa->d_expr = expr();
        } else if( la.d_type == Tok_Star )
        {
            wa->d_kind = WriteArg::Star;
            expect(Tok_Star, false, "writearg");
            wa->d_expr = expr();
        }
        else if( FIRST_expr(la.d_type) )
        {
            wa->d_kind = WriteArg::Expr;
            wa->d_expr = expr();
        }else
            invalid("writearg");
        c->d_writeArgs.append(wa);

        while( la.d_type == Tok_Comma || FIRST_writearg(la.d_type) )
        {
            if( la.d_type == Tok_Comma )
                expect(Tok_Comma, false, "writeargs");
